# AutoGenSupport

./: .gitignore  AutoGenSupTestAP.ini  AutoGenSupport.sln  README.md  TestCases.txt
AutoGenSupDLL/: AutoGenSupDLL.cpp  AutoGenSupDLL.h  AutoGenSupDLL.rc  AutoGenSupDLL.vcxproj  AutoGenSupDLL.vcxproj.filters  CMakeLists.txt  DataCombination.h  Sp3ApiForQt.cpp  Sp3ApiForQt.h  SupportCommon.h  SupportData.h  resource.h  stdafx.h
AutoGenSupDLL/CollisionDetect/: RayCollisionDetect.h  RayCollisionDetect_DbgMsg.h
AutoGenSupDLL/DemoApMac/: Sp3ApiTest.cpp  Sp3ApiTest.h  XYZSupportDemoMac.cpp
AutoGenSupDLL/Helper/: Clipper.cpp  MyTools.cpp  MyTools.h  clipper.hpp
AutoGenSupDLL/LayerModule/: LayerModel.h  MeshModel.h  PointsSplitter.h  SegmentModel.h
AutoGenSupDLL/Mac/: SupportWrapper.h  SupportWrapper.mm  libXYZmesh.dylib
AutoGenSupDLL/SpaceStructure/: Cube.h  CubeMatrix.h  CubeNum.h
AutoGenSupDLL/SupportBase/: Cubedata.h  SupportMeshsBase.h  SupportMeshsMark.h  SupportSymbol.h
AutoGenSupDLL/SupportBed/: SupportMeshsBed.cpp  SupportMeshsBed.h  SupportMeshsBedDbg.h
AutoGenSupDLL/geom/: Helper.cpp  (+13 more)
Slicer2.0DLL/: AABB3D.cpp  AABB3D.h  CMakeLists.txt  DeleteInterm.bat  LinearAlg2D.cpp  ListPolyIt.cpp  ListPolyIt.h  ProjectiveMapping.h  ReadMe.txt  Slicer2.0DLL.cpp  Slicer2.0DLL.h  Slicer2.0DLL.vcxproj  Slicer2.0DLL.vcxproj.filters  Slicer20DemoMac.cpp  SparseGrid.h  SparsePointGrid.h  SparsePointGridInclusive.h  clipper.cpp  floatpoint.h  intpoint.h  linearAlg2D.h  main.cpp  mesh.cpp  mesh.cpp__  mesh.h  polygon.cpp  polygon.h  resource.rc  slicertest.cpp  slicertest.h  stdafx.cpp  stdafx.h
(+38 files in other folders)
